--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: Reflexions-sur-le-suicide_67086
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 67086-h/images/cover.jpg
 creator:
   author:
     agent_name: Staël-Holstein, Germaine de
     gutenberg_agent_id: '54031'
     url: http://www.gutenberg.org/2009/agents/54031
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/67086#Reflexions-sur-le-suicide
 gutenberg_issued: '2022-01-02'
 identifiers:
   gutenberg: '67086'
